--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 # Core dependencies
-streamlit>=1.28.0
+streamlit
 pandas
-plotly>=5.15.0
+plotly
 
 # NLP dependencies
-nltk>=3.8.0
-mordecai3==3.0.0a0
+nltk
+mordecai3
 
 # HTTP requests
-requests>=2.31.0
+requests
 
 # Additional utilities
-numpy>=1.24.0
+numpy
 
 # For authentication
-pyyaml>=6.0
-bcrypt>=4.0
-streamlit-authenticator>=0.2.2
+pyyaml
+bcrypt
+streamlit-authenticator
