--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ credentials:
     demo_user:
       email: demo@example.com
       name: Demo User
-      password: "$2b$12$ays96g56VZmTKK7ul9g0/OuuMlLdJavqcBSqZimD37A29YIKcvC52" 
+      password: "$2b$12$3brg6WL4K8jAFw1j/v7Ai.8Xrk0W4rcgOjh6.N0RaqLRtU5PpfSWW" 
 cookie:
   name: streamlit_auth
   key: secret_cookie_key_abc123
